--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "@openzeppelin/contracts": "^5.0.2",
+    "@swisstronik/utils": "^1.3.0",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.1"
   }
 }
