--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@swisstronik/utils": "^1.3.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.1"
